Added 10 BBH events reported in GWTC-1 and GW151216, for uniform comparison. Added acknowledgement of GWOSC to readme.

--- a/example_loading.ipynb
+++ b/example_loading.ipynb
@@ -25,8 +25,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events = ['GW170121', 'GW170202', 'GW170304',\n",
-    "          'GW170425', 'GW170727', 'GW170403']"
+    "events = [\n",
+    "    'GW151216',\n",
+    "    \n",
+    "    'GW170121', 'GW170202', 'GW170304', 'GW170425', 'GW170727', 'GW170403', \n",
+    "    \n",
+    "    'GW150914', 'GW151226', 'GW170104', 'GW170608', 'GW170729',\n",
+    "    'GW170809', 'GW170814', 'GW170818', 'GW170823', 'GW151012'\n",
+    "]"
    ]
   },
   {
